# Tuplite

./: README.md  bun.lockb  package.json  sqlite-wrapper.ts  test.ts  tuplite.py  tuplite.ts
Bun/: README.md  bun.lockb  package.json  tuplite.ts  usage.ts
old/python-old/: tuplite.py
old/typescript-old/: dbinterface.ts
test/bun/: README.md  bun.lockb  package.json  tempdb1.db  tempdb1.db-shm  tempdb1.db-wal  tempdb2.db  tempdb2.db-shm  tempdb2.db-wal  test.ts  test2.ts  test3.ts  test4.ts
test/deno/: test.ts  test2.ts
test/node/: package-lock.json  package.json  test.js  tsconfig.json
tuplite/: README.md  bun-sqlite-wrapper.d.ts  bun-sqlite-wrapper.js  bun-sqlite-wrapper.ts  bun.lockb  index.d.ts  index.js  index.ts  package-lock.json  package.json  test.ts  tsconfig.json  tuplite.d.ts  tuplite.js  tuplite.ts  types.d.ts  types.ts  utils.d.ts  utils.js  utils.ts  wrapper.d.ts  wrapper.js  wrapper.ts
tuplite.py/: pyproject.toml  temp.py  test.py  tuplite_types.py
tuplite.ts/: README.md  bun-sqlite-wrapper.ts  deno-sqlite-ffi-wrapper.ts  deno-sqlite-wasm-wrapper.ts  deno.json  index.ts  node-better-sqlite-wrapper.ts  package-lock.json  package.json  test.ts  tsconfig.json  tuplite.ts  types.ts  utils.ts  wrapper.ts
tuplite.ts/.devcontainer/: devcontainer.json
typescript-old/: dbinterface.ts
